fix: change header styles to remove horizontal scrolling

--- a/src/view/components/header/header.css
+++ b/src/view/components/header/header.css
@@ -4,23 +4,24 @@
 }
 
 .header-container {
-    max-width: 100rem;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1.0%;
+    padding: 1.0% 0;
     color: var(--color-textDefault);
-    height: 17rem;
+    height: 19rem;
     font-size: 1.3rem;
 }
 
 .header-tools {
-    width: 80%;
-    justify-content: space-evenly;
+    max-width: 100rem;
+    width: 100%;
+    justify-content: space-around;
     display: flex;
     align-items: center;
-    margin-bottom: 1rem;
+    padding: 0 2rem;
+    margin-bottom: 1.5rem;
 }
 
 .header-logo {
@@ -40,17 +41,19 @@
 }
 
 .header-location-container {
-    width: 100vw;
+    width: 100%;
     height: 4rem;
     background-color: rgba(255, 255, 255, 0.2);
 }
 
 .header-location {
-    width: 70%;
+    max-width: 100rem;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     height: 100%;
     gap: 1rem;
+    padding: 0 2rem;
     align-items: center;
     justify-content: space-around;
     font-size: 1.4rem;
@@ -96,17 +99,18 @@
 }
 
 .header-nav-container {
-    width: 100vw;
+    width: 100%;
     height: 4rem;
     background-color: rgb(0, 0, 0, 0.4);
 }
 
 .header-nav {
-    width: 70%;
+    max-width: 100rem;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     font-size: 1.6rem;
     height: 100%;
     color: var(--color-white);
